feat: add course endpoint api documentation
